# ProjectorCameraCalibration

./: CMakeLists.txt  README.md  analyseresult.cpp  augmentation.cpp  procamcalib.cpp  summarize.cpp
auglib/: CMakeLists.txt  augmentenvironment.cpp  augmentenvironment.h  matcher.cpp  matcher.h
caliblib/: CMakeLists.txt  boardtracker.cpp  boardtracker.h  calibdata.cpp  calibdata.h  calibenvironment.cpp  calibenvironment.h  calibenvironment.test  detectionimprovor.cpp  detectionimprovor.h  headers.h  pointdetection.cpp  pointdetection.h
detectionlib/: CMakeLists.txt  detector.cpp  detector.hpp
detectionlib/scaleddetector/: scaleddetector.cpp  scaleddetector.hpp
detectionlib/skeleton/: skeleton.cpp  skeleton.hpp
lgc/include/: abstractgenerator.hpp  affine2D.hpp  basicfunctions.hpp  basictype.h  chronometer.h  datastructure.hpp  debugdrawing.hpp  generator.hpp  generator2Daff.hpp  generator3Dsim.hpp  hashtableint.hpp  lgc2D_test.hpp  lgcmethod.hpp  lgcmodelset.hpp  lgcpointset.hpp  matchinginterface.hpp  mathfuns.h  perspective2D.hpp  refiner.hpp  similarity3D.hpp  transformation.hpp  validator.hpp
patterns/A3/: A3Pattern.txt
patterns/A4/: A4Pattern.txt  A4PatternAll.txt  A4PatternProjected.txt
patterns/ARToolKitPattern/: convertion.txt
patterns/B4/: B4Pattern.txt  B4PatternAll.txt  B4PatternProjected.txt
patterns/asymCircles/: AcircleA4Print.txt  AcircleA4Projected.txt
patterns/asymCirclesA0/: AcircleA0Print.txt  AcircleA0Projected.txt
patterns/asymCirclesA1/: circleA1Print.txt  circleA1Projected.txt
patterns/asymCirclesA2/: circleA2Print.txt  circleA2Projected.txt
patterns/chessboard/: ChessBoardA4Print.txt
patterns/refSize/: refSize.txt
pointpatterngen/: CMakeLists.txt  acirclegridgenerator.cpp  chessboardgenerator.cpp  pointpatterngen.cpp
script/: getErrorA0.sh  getErrorA4.sh  getFrontErrorA0.sh  getFrontErrorA4.sh  readme.txt  run5.sh  test.sh
